# flookaa

./: .gitignore  README.md  go.work  go.work.sum  notes.md  rsync.sh
ansible/: .ansible-lint  .gitignore  README.md  ansible.cfg  app.playbook.yml  grafana.playbook.yml  hosting-machine.playbook.yml  internal-build.playbook.yml  mongodb.playbook.yml  nats.playbook.yml  neo4j.playbook.yml  nginx.playbook.yml  pick-and-play.bash  postgres.playbook.yml  redis.playbook.yml  requirements.yml  s3.playbook.yml  unlock.sh
ansible/files/: ssh-key.pem
ansible/internal-scripts/: README.md  encrypt-directory-files.bash  vault-pass.bash
ansible/inventory/: app.inventory.yml  grafana.inventory.yml  hosting-machine.inventory.yml  internal-build.inventory.yml  mongodb.inventory.yml  nats.inventory.yml  neo4j.inventory.yml  nginx.inventory.yml  postgres.inventory.yml  redis.inventory.yml  s3.inventory.yml
ansible/vars/: app_vault.yml  grafana_vault.yml  maxmind.vault.yml  neo4j_vault.yml  nginx_vault.yml  postgres_vault.yml  redis_vault.yml  s3_vault.yml  universe.yml
backend/: README.md  deploy.bash  go.mod  go.sum  main.go
front-end/: codegen.yml  deploy.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
front-end/src/: App.tsx  index.css  (+7 more)
gRCP/: README.md  build-gRCP.sh
nats/: Cargo.toml  README.md  deploy.sh
nats/src/: go_bridge.rs  main.rs  nats.rs  ws.rs
redis/: README.md  deploy.bash  go.mod  main.go
s3/: deploy.bash  go.mod  go.sum  main.go  send.sh
shared/: Makefile  go.mod  go.sum  gqlgen.yml  seed-countries.sh  send.sh  sqlc.yaml
(+293 files in other folders)
