[package]
name = "ws_proxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Rust WebSocket proxy for NATS and Go app"
license = "MIT"

[dependencies]
async-nats = "0.44.1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.41", features = ["full"] }
axum = { version = "0.6", features = ["headers", "ws"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
once_cell = "1.17"
bytes = "1.4"
headers = "0.4.1"
serde_json = "1.0.0"
serde = "1.0.228"

openssl = { version = "0.10", features = ["vendored"] }
